--- a/web_content/css/lah-common.css
+++ b/web_content/css/lah-common.css
@@ -329,114 +329,119 @@ span.highlight {
 
 /* RIBBON ACCENTS */
 
-.ribbon[data-packaccent=red]:after {
+.ribbon[data-packaccent="red"]:after {
     background: #800;
 }
 
-.ribbon[data-packaccent=orange]:after {
+.ribbon[data-packaccent="orange"]:after {
     background: #d70;
     color: #000 !important;
 }
 
-.ribbon[data-packaccent=yellow]:after {
+.ribbon[data-packaccent="yellow"]:after {
     background: #ed0;
     color: #000 !important;
 }
 
-.ribbon[data-packaccent=navy]:after {
+.ribbon[data-packaccent="navy"]:after {
     background: #035;
 }
 
-.ribbon[data-packaccent=blue]:after {
+.ribbon[data-packaccent="blue"]:after {
     background: #36a;
 }
 
-.ribbon[data-packaccent=lightblue]:after {
+.ribbon[data-packaccent="lightblue"]:after {
     background: #58c;
 }
 
-.ribbon[data-packaccent=green]:after {
+.ribbon[data-packaccent="green"]:after {
     background: #181;
 }
 
-.ribbon[data-packaccent=turquoise]:after {
+.ribbon[data-packaccent="turquoise"]:after {
     background: #2a8;
 }
 
-.ribbon[data-packaccent=black]:after {
+.ribbon[data-packaccent="black"]:after {
     background: #000;   
 }
 
-card[black] .ribbon[data-packaccent=black]:after {
+card[black] .ribbon[data-packaccent="black"]:after {
     background: #505050;
 }
 
-.ribbon[data-packaccent=purple]:after {
+.ribbon[data-packaccent="purple"]:after {
     background: #606;
 }
 
-.ribbon[data-packaccent=poo]:after {
+.ribbon[data-packaccent="poo"]:after {
     background: #650;
 }
 
-.ribbon[data-packaccent=brown]:after {
+.ribbon[data-packaccent="brown"]:after {
     background: #420;
 }
 
-.ribbon[data-packaccent=limegreen]:after {
+.ribbon[data-packaccent="limegreen"]:after {
     background: #0f0;
     color: #000 !important;
 }
 
-.ribbon[data-packaccent=vs]:after {
+.ribbon[data-packaccent="vs"]:after {
     background: #865FC5;
     color: #fff !important;
     font-family: "Segoe UI", "LAH", sans-serif !important;
     font-weight: 600;
 }
 
-.ribbon[data-packaccent=rainbow]:after {
+.ribbon[data-packaccent="rainbow"]:after {
     background: linear-gradient(to right, #f00, #f90, #ff0, #0f0, #0df, #00f, #f0f);
     color: #000 !important;
     background-size: 100%;
 }
 
-.ribbon[data-packaccent=rainbow]:not(:hover):after {
+.ribbon[data-packaccent="rainbow"]:not(:hover):after {
     background-repeat: repeat-x;
     background-size: 10%;
 }
 
-.ribbon[data-packaccent=white]:after {
+.ribbon[data-packaccent="white"]:after {
     background: #fff;
     border: 2px solid black;
 }
 
-.ribbon[data-packaccent=headache]:after {
+.ribbon[data-packaccent="headache"]:after {
     background: repeating-linear-gradient(115deg, #000, #000 4px, #0f0 4px, #f0f 6px);
     color: #fff !important;
     font-weight: 900;
 }
 
-.ribbon[data-packaccent=pink]:after {
+.ribbon[data-packaccent="pink"]:after {
     background: #f78;
     color: #000 !important;
 }
 
-.ribbon[data-packaccent=flesh]:after {
+.ribbon[data-packaccent="flesh"]:after {
     background: #fa9;
     color: #a00 !important;
 }
 
-.ribbon[data-packaccent=nostalgia]:after {
+.ribbon[data-packaccent="nostalgia"]:after {
     background: #37d;
     color: #f81 !important;
     font-family: "Times New Roman", "LAH", sans-serif !important;
 }
 
-.ribbon[data-packaccent=transcend]:after {
+.ribbon[data-packaccent="transcend"]:after {
     background: #03f;
     color: #f0f !important;
     font-weight: 900 !important;
+}
+
+.ribbon[data-packaccent="fp"]:after {
+    background: #BC494D !important;
+    color: white !important;
 }
 
 /* CARD TIER COLORS */
