--- a/web_content/css/colan-desktop.css
+++ b/web_content/css/colan-desktop.css
@@ -1091,7 +1091,7 @@ card .ribbon {
     border-radius: 0 0 calc(var(--card-border-radius) - 2px) calc(var(--card-border-radius) - 2px);
 }
 
-card .ribbon:after {
+card[data-packid] .ribbon:after {
     position: absolute;
     left: 0;
     top: 40px;
@@ -1113,12 +1113,13 @@ card .ribbon:after {
 
 card[data-packid] .ribbon:not(:hover):after {
     color: rgba(0,0,0,0) !important;
+    background-size: 12.5% !important;
 }
 
 card .ribbon:hover:after {
     color: #fff;
     transform: rotate(0deg) translateY(-10px);
-    background-size: 10%;
+    background-size: 100% !important;
 }
 
 card .ribbon:hover ~ .pick, card .ribbon:hover ~ .draw {
@@ -1381,11 +1382,15 @@ input[type=checkbox].lah-checkbox {
     margin: 0;
     padding: 0;
     opacity: 0;
+    height: 0;
+    width: 0;
 }
 
 input[type=checkbox].lah-checkbox + label {
     position: relative;
     padding-left: 32px;
+    cursor: default;
+    user-select: none;
 }
 
 input[type=checkbox].lah-checkbox + label:before {
@@ -1400,6 +1405,11 @@ input[type=checkbox].lah-checkbox + label:before {
     border: 2px solid black;
     border-radius: 3px;
     box-sizing: border-box;
+    transition: background-color .25s ease;
+}
+
+input[type=checkbox].lah-checkbox:active + label:before {
+    background-color: rgba(0, 0, 0, .1);
 }
 
 input[type=checkbox].lah-checkbox:checked + label:after {
@@ -1691,7 +1701,6 @@ input[type=checkbox].lah-checkbox:checked + label:after {
 
     /* GAME AREA */
 
-
     #game {
         grid-template-columns: [c-start] 1fr [c-center] 1fr [c-end sb-start] 330px [sb-end];
         grid-template-rows: [r-start] 1fr [r-center] 1fr [r-end];
@@ -1707,5 +1716,4 @@ input[type=checkbox].lah-checkbox:checked + label:after {
     #player-list-wrapper {
         flex-basis: 40%;
     }
-
 }
