--- a/web_content/css/colan-desktop.css
+++ b/web_content/css/colan-desktop.css
@@ -134,6 +134,51 @@ smaller {
     grid-template-rows: [r-start] 1fr [r-center] 1fr [r-end];
 }
 
+/* COOKIE NOTICE */
+
+#cookie-notice {
+    position: fixed;
+    bottom: 0;
+    height: auto;
+    left: 0;
+    right: 0;
+    background: black;
+    color: white;
+    border-top: 1px solid white;
+    z-index: 99999999;
+    padding: .5em 1.5em;
+}
+
+#cookie-notice > p {
+    font-size: 12pt;
+    font-weight: 400;
+    width: 50%;
+    margin: 6px auto;
+}
+
+#cookie-notice > h1 {
+    text-align: center;
+    font-size: 18pt;
+    font-weight: 600;
+    margin: 6px 6px;
+}
+
+#cookie-notice > input[type=button].closer {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 14pt;
+    line-height: 1em;
+    color: white;
+    width: 1em;
+    height: 1em;
+    outline: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
 /* PLAYER LIST AND CHAT */
 
 #player-list-area {
@@ -1531,7 +1576,6 @@ input[type=checkbox].lah-checkbox:checked + label:after {
     display: flex;
     flex-direction: column;
     margin: 4pt 2pt;
-    width: 100%;
 }
 
 .lah-vlist > .lah-gap, .modal-body > .lah-gap {
